<resources>
    <string name="app_name">Zil</string>
    <string name="zil_al_rabb">Zil al-Rabb</string>
    <string name="sign_in">Log in</string>
    <string name="hello">Hello!</string>
    <string name="email_id_or_phone">Email id or Phone</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user">New user?</string>
    <string name="create_an_account">Create An Account</string>
    <string name="let_s_join_us">Let\'s join us!</string>
    <string name="full_name">Full name</string>
    <string name="email_id">Email ID</string>
    <string name="invalid_name">Invalid name!</string>
    <string name="invalid_email">Invalid email!</string>
    <string name="invalid_password">Weak password!</string>
    <string name="phone_number">Phone number</string>
    <string name="have_account">Have account?</string>
    <string name="login">Login</string>
    <string name="create_account">Create account</string>
    <string name="create_new_account">Create new account</string>
    <string name="back">Back</string>
    <string name="login_instead">Login instead</string>
    <string name="gender">Gender</string>
    <string name="profanity_notice">System predicts your name is potentially against our community guidelines. Continue if you are using your original name, if done on purpose you account can get banned.</string>
    <string name="profanity_warning">Profanity Warning</string>
    <string name="i_understand">I understand</string>
    <string name="invalid_phone">Invalid phone</string>
    <string name="creating_account">Creating account…</string>
    <string name="try_again">Something went wrong! Try again</string>
    <string name="email_verification">Email verification</string>
    <string name="enter_the_6_digit_verification_pin_we_just_sent_to_your_email_id">Enter the 6 digit verification pin we just sent to your email ID</string>
    <string name="hashes">######</string>
    <string name="sending_verification_pin">Sending verification pin…</string>
    <string name="change_email">Change email</string>
    <string name="invalid_pin">Invalid PIN!</string>
    <string-array name="genders">
        <item>Religious brother</item>
        <item>Religious sister</item>
    </string-array>
    <string name="title_activity_profile_picture">ProfilePicture</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="profile_picture">Profile picture</string>
    <string name="mashallah_you_are_our_new_member_let_s_set_your_profile_picture">MashAllah, you are our new member! Let\'s set your profile picture</string>
    <string name="we_only_support_halal_content_anything_against_the_laws_of_sariah_will_be_banned">We only support halal content, anything against the laws of sariah will be banned!</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="done">Done</string>
    <string name="crop_photo">Crop Photo</string>
    <string name="saving">Saving…</string>
    <string name="image_is_not_halal_please_select_halal_image">Image is not halal! Please select halal image.</string>
    <string name="image_looks_good">MashAllah, looks good!</string>
    <string name="profile">Profile</string>
    <string name="fa_home"></string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="fa_menu"></string>
    <string name="search">Search</string>
    <string name="fa_search"></string>
    <string name="fa_people"></string>
    <string name="people">People</string>
    <string name="fa_add"></string>
    <string name="profile_cover">Profile Cover</string>
    <string name="fa_elipsis"></string>
    <string name="verified_badge">Verified badge</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="media">Media</string>
    <string name="fa_globe"></string>
    <string name="fa_clock"></string>
    <string name="fa_work"></string>
    <string name="fa_college"></string>
    <string name="fa_location"></string>
    <string name="post_content">Post content</string>
    <string name="fa_heart"></string>
    <string name="fa_comments"></string>
    <string name="fa_share"></string>
    <string name="_0">0</string>
    <string name="uf141"></string>
    <string name="load_failed">Load failed!</string>
    <string name="save">Save</string>
    <string name="publish">Publish</string>
    <string name="post">Post</string>
    <string name="reels">Reels</string>
    <string name="write_something">Write something…</string>
    <string name="fa_world"></string>
    <string name="image">Image</string>
    <string name="add_media">+ Add media</string>
    <string name="close">Close</string>
    <string name="folders">Folders</string>
    <string name="crop">Crop</string>
    <string name="network_error_occurred">Network error occurred!</string>
    <string name="cropping_the_images_to_fit_is_a_best_practise_and_will_look_better">Cropping the images to fit is a best practise and will look better!</string>
    <string-array name="privacy_options">
        <item>Public</item>
        <item>Friends</item>
        <item>Only me</item>
    </string-array>
</resources>