<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white_robust"
    android:orientation="vertical">
    <TextView
        android:textColor="@color/black"
        android:fontFamily="@font/ubuntu"
        android:textSize="20sp"
        android:text="@string/profanity_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginTop="15dp"
        android:fontFamily="@font/ubuntu"
        android:textSize="15sp"
        android:text="@string/profanity_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/close"
        android:gravity="center"
        android:textStyle="bold"
        android:paddingTop="15dp"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/ubuntu"
        android:textSize="15sp"
        android:text="@string/i_understand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>