<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".Login.Login">

    <LinearLayout
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nestapha"
            android:text="@string/hello"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:textColorHint="@color/hint_color"
            android:textColor="@color/black"
            android:fontFamily="@font/ubuntu"
            android:padding="10dp"
            android:hint="@string/email_id_or_phone"
            android:layout_marginTop="25dp"
            android:background="@drawable/rounded_text_box"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/user"
            android:drawablePadding="10dp"/>

        <EditText
            android:background="@drawable/rounded_text_box"
            android:textColorHint="@color/hint_color"
            android:textColor="@color/black"
            android:fontFamily="@font/ubuntu"
            android:padding="10dp"
            android:hint="@string/password"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:drawableStart="@drawable/password"
            android:drawablePadding="10dp"/>

        <Button
            android:paddingStart="80dp"
            android:paddingEnd="80dp"
            android:fontFamily="@font/ubuntu"
            android:textColor="@color/black"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="50dp"/>


        <TextView
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:textAlignment="center"
            android:text="@string/forgot_password"
            android:textColor="@color/white_robust"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:paddingEnd="0dp"
                android:padding="10dp"
                android:textAlignment="center"
                android:text="@string/new_user"
                android:textColor="@color/white_robust"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/signup"
                android:layout_marginStart="5dp"
                android:focusable="true"
                android:clickable="true"
                android:background="?android:attr/selectableItemBackground"
                android:textStyle="bold"
                android:padding="10dp"
                android:textAlignment="center"
                android:text="@string/create_an_account"
                android:textColor="@color/white_robust"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>