<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_robust"
    tools:context=".SubActivity.Media">
    <LinearLayout
        android:background="@color/black_overlay"
        android:elevation="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <RelativeLayout
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/back"
            android:gravity="center"
            android:layout_width="65dp"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/close_white"
                android:layout_width="32dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/close" />
        </RelativeLayout>
        <TextView
            android:id="@+id/mediaTitle"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/ubuntu"
            android:textSize="20sp"
            android:textColor="@color/white_robust"
            android:gravity="center|start"
            android:text="@string/media"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/next"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:textSize="20sp"
            android:gravity="center"
            android:fontFamily="@font/ubuntu"
            android:textColor="@color/white_robust"
            android:text="@string/done"
            android:layout_width="90dp"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <Spinner
        android:id="@+id/folderSpinner"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="55dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fileList"
        android:layout_marginTop="115dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>